--- a/wp-content/themes/responsive/style.css
+++ b/wp-content/themes/responsive/style.css
@@ -2732,8 +2732,8 @@ h3                									{margin:0; padding:0 0 10px; color:#E3E3E3; font-size
 h4                									{margin:0; padding:0 0 5px; color:#a5d53a; font-size:18px; text-transform:uppercase;}
 ul 													{margin:8px 0 0;}
 #container 											{max-width:100%; padding:0;}
-#header 											{height:100px; border-bottom: 1px solid #77a298; position:relative;}
-#logo 												{margin:18px 0 18px 30px;}
+#header 											{height:100px; border-bottom: 1px solid #FFFFE0; position:relative;}
+#logo 												{margin:5px 0 18px 30px;}
 .menu, .menu ul										{float:right; clear:none; margin:27px 30px 0 0; background:none;}
 .menu a 											{margin:0 0.9em; padding:0; height:35px; background:none; border:none; color:#77a298; text-decoration:none; text-transform:uppercase; text-shadow:none; font-size:15px;}
 .menu a:hover 										{background:none; color:#AFEEEE;}
