--- a/wp-content/themes/responsive/style.css
+++ b/wp-content/themes/responsive/style.css
@@ -2727,7 +2727,7 @@ BDO[DIR="rtl"] {
 ::moz-selection         							{background-color:#F9459E; color:#FFFFFF;}
 ::webkit-selection      							{background-color:#F9459E; color:#FFFFFF;}
 body 												{color:#FFFFFF; font-family:'Abel', arial, sans;}
-h1 													{color:#FFFFE0;}
+h1 													{color:#EEEEEE;}
 h3                									{margin:0; padding:0 0 10px; color:#E3E3E3; font-size:22px;}
 h4                									{margin:0; padding:0 0 5px; color:#a5d53a; font-size:18px; text-transform:uppercase;}
 ul 													{margin:8px 0 0;}
